test/org/midica/testfiles/failing/eff-cd-src-duplicate.midica
INCLUDE inc/instruments.midica


0: ctrl_dest
0:   .src(mono_at)
0:   .src(poly_at)
0:   .on()

